# practice

./: .gitignore
algos/letter_combos_phone/rs_letter_combos_phone/: Cargo.toml
algos/letter_combos_phone/rs_letter_combos_phone/src/: main.rs
algos/max_profit_job_scedule/: README.md
algos/max_profit_job_scedule/cpp_max_profit_job_scedule/: CMakeLists.txt
algos/max_profit_job_scedule/cpp_max_profit_job_scedule/include/: ans.hpp
algos/max_profit_job_scedule/cpp_max_profit_job_scedule/src/: ans.cpp
algos/max_profit_job_scedule/cpp_max_profit_job_scedule/test/: test_ans.cpp
algos/max_profit_job_scedule/rs_max_profit_job_scedule/: Cargo.toml
algos/max_profit_job_scedule/rs_max_profit_job_scedule/src/: main.rs  main_slow.rs  main_very_slow.rs
algos/max_profit_job_scedule/rs_max_profit_job_scedule/test_data/: test_3
algos/old/a_star/src/: main.rs
algos/old/add_2_link_list_num/: Cargo.toml
algos/old/add_2_link_list_num/src/: main.rs
algos/old/break_palindrome/: Cargo.toml
algos/old/break_palindrome/src/: main.rs
algos/old/closest_3sum/: Cargo.toml
algos/old/closest_3sum/src/: main.rs
algos/old/find_common_chars/: Cargo.toml
algos/old/find_common_chars/src/: main.rs
algos/old/image_overlap/src/: better_sol.rs  better_sol_2.rs  better_sol_3.rs  main.rs  old_slow_solution.rs
algos/old/len_last_word/: Cargo.toml
algos/old/len_last_word/src/: main.rs
algos/old/longest_palendromic_substring/: Cargo.toml
algos/old/longest_palendromic_substring/src/: main.rs
algos/old/longest_palindrome_concat/cpp_longest_palindrome_concat/: CMakeLists.txt
algos/old/longest_palindrome_concat/cpp_longest_palindrome_concat/include/: ans.hpp
algos/old/longest_palindrome_concat/cpp_longest_palindrome_concat/src/: ans.cpp
algos/old/longest_palindrome_concat/cpp_longest_palindrome_concat/test/: test.cpp
algos/old/longest_palindrome_concat/rs_longest_palindrome_concat/: Cargo.toml
algos/old/longest_substring_no_repeat/src/: main.rs
algos/old/min_genetic_mutation/cpp_min_genetic_mutiation/: CMakeLists.txt
algos/old/min_genetic_mutation/cpp_min_genetic_mutiation/include/: solution.hpp
algos/old/min_genetic_mutation/cpp_min_genetic_mutiation/test/: test_ans.cpp
algos/old/min_genetic_mutation/rs_min_genetic_mutation/: Cargo.toml
algos/old/min_genetic_mutation/ts_min_genetic_mutation/: package-lock.json  package.json
algos/old/min_job_scedule/: Cargo.toml
algos/old/min_job_scedule/src/: main_fast.rs  main_slow.rs
algos/old/min_triplet/: Cargo.toml
algos/old/min_triplet/src/: main.rs
algos/old/most_water/src/: main.rs
algos/old/string_compress_2/: Cargo.toml
algos/old/string_compress_2/src/: main.rs
algos/old/string_compress_2_easy_ver/: Cargo.toml
algos/old/string_compress_2_easy_ver/src/: main.rs
algos/old/where_ball_fall/: Cargo.toml
algos/orderly_queue/cpp_orderly_queue/: CMakeLists.txt
algos/orderly_queue/py_orderly_queue/: ans.py
algos/orderly_queue/rs_orderly_queue/: Cargo.toml
algos/orderly_queue/ts_orderly_queue/: README.md  bun.lockb  package.json
algos/rectangle_area/rs_rectangle_area/: Cargo.toml
algos/reverse_vowels/py_reverse_vowels/: ans.py
algos/reverse_vowels/rs_reverse_vowels/: Cargo.toml
algos/reverse_vowels/ts_reverse_vowels/: README.md  bun.lockb  package.json
algos/ugly_number/cpp_ugly_number/: CMakeLists.txt
algos/ugly_number/cpp_ugly_number/include/: ans.hpp
algos/ugly_number/cpp_ugly_number/src/: ans.cpp
algos/ugly_number/cpp_ugly_number/test/: test_ans.cpp
algos/ugly_number/py_ugly_number/: ans.py
algos/ugly_number/rs_ugly_number/: Cargo.toml
algos/ugly_number/ts_ugly_number/: README.md  bun.lockb  package.json
algos/word_search/cpp_word_search/: CMakeLists.txt
algos/word_search/py_word_search/: ans.py
algos/word_search/rs_word_search/: Cargo.toml
algos/word_search/ts_word_search/: README.md  bun.lockb  package.json
comms/simple_tcp_socket/py/: client.py  server.py
packaging/cpp/apt_pkg/: CMakeLists.txt
packaging/cpp/apt_pkg/install/include/: test_class.hpp
packaging/cpp/apt_pkg/src/: main.cpp  test_class.cpp
packaging/py/hello_pkg/: README.md  pyproject.toml
packaging/py/hello_pkg/src/: __init__.py  extra_file.py  main.py
(+33 files in other folders)
