[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello_world_ALEX"
version = "0.0.1"
authors = [
  { name="Alex Milmore", email="alex.milmore0@gmail.com" }
]
description = "basic example pkg"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://google.com"
"Bug Tracker" = "http://google.com"
